--- a/SocialMediaAPI/appsettings.json
+++ b/SocialMediaAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SocialMedia": "Server=DESKTOP-0TQCTUO;Database=SocialMedia;Trusted_Connection=true;TrustServerCertificate=True"
+    "SocialMedia": "Server=SOCIAL_MEDIA_SERVER;Database=SOCIAL_MEDIA_BD;Trusted_Connection=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
